enhance file upload feature with dynamic filename and progress display

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fast Drop</title>
-    <link rel="stylesheet" href="./assets/css/output.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/css/output.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="flex items-center justify-center w-full h-screen" id="fileUploadContainer">
+      <label
+        for="uploadFile"
+        class="flex flex-col h-screen items-center justify-center w-full h-64 border-2 border-gray-300 border-dashed cursor-pointer bg-gray-50 hover:bg-gray-100"
+      >
+        <div class="flex flex-col items-center justify-center pt-5 pb-6">
+          <svg
+            class="w-8 h-8 mb-4 text-gray-500"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 20 16"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2"
+            />
+          </svg>
+          <p class="mb-2 text-sm text-gray-500">
+            <span class="font-semibold">Click to upload</span> or drag and drop
+          </p>
+          <p class="text-xs text-gray-500">Max. 100MB</p>
+        </div>
+        <input id="uploadFile" type="file" class="hidden" />
+      </label>
+    </div>
 
-    <p class="">Fast Drop</p>
-    
-</body>
+    <div class="flex flex-col items-center justify-center h-screen hidden" id="fileProgressContainer">
+      <div
+        class="bg-gray-100 shadow-lg rounded-xl flex flex-col items-center w-96 mx-4 p-4"
+      >
+        <!-- Progress bar -->
+        <div class="flex flex-row justify-between items-center mb-2 w-full">
+          <span class="text-base font-medium text-blue-700">Flowbite</span>
+          <span class="text-sm font-medium text-blue-700">45%</span>
+        </div>
+        <div class="w-full bg-gray-200 rounded-full h-2.5">
+          <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
+        </div>
+
+        <!-- Copy container -->
+        <div
+          class="flex flex-row shadow-lg justify-between items-center gap-2 my-8 bg-white rounded-full w-80 px-4 py-1"
+        >
+          <p>https://yoni-tad.com/dl/2546395784</p>
+          <svg
+            class="h-5 cursor-pointer"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.666 3.888A2.25 2.25 0 0 0 13.5 2.25h-3c-1.03 0-1.9.693-2.166 1.638m7.332 0c.055.194.084.4.084.612v0a.75.75 0 0 1-.75.75H9a.75.75 0 0 1-.75-.75v0c0-.212.03-.418.084-.612m7.332 0c.646.049 1.288.11 1.927.184 1.1.128 1.907 1.077 1.907 2.185V19.5a2.25 2.25 0 0 1-2.25 2.25H6.75A2.25 2.25 0 0 1 4.5 19.5V6.257c0-1.108.806-2.057 1.907-2.185a48.208 48.208 0 0 1 1.927-.184"
+            />
+          </svg>
+        </div>
+        <p class="text-sm">Expire after 24 hours</p>
+      </div>
+      <div class="p-4 bg-gray-100 rounded-full mt-4">
+        <svg
+          class="h-4"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="size-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M6 18 18 6M6 6l12 12"
+          />
+        </svg>
+      </div>
+    </div>
+
+    <script src="./assets/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+  </body>
 </html>
