implement file cleanup cron job and refactor file upload middleware

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       id="fileProgressContainer"
     >
       <div
-        class="bg-gray-100 shadow-lg rounded-xl flex flex-col items-center w-96 mx-4 p-4"
+        class="bg-gray-100 shadow-lg rounded-xl flex flex-col items-center w-1/2 mx-4 p-4"
       >
         <!-- Progress bar -->
         <div class="flex flex-row justify-between items-center mb-2 w-full">
@@ -87,7 +87,7 @@
 
         <!-- Copy container -->
         <div
-          class="flex flex-row shadow-lg justify-between items-center gap-2 my-8 bg-white rounded-full w-80 px-4 py-1 hidden"
+          class="flex flex-row shadow-lg justify-between items-center gap-2 my-8 bg-white rounded-full w-96 px-4 py-1 hidden"
           id="copyContainer"
         >
           <p class="text-sm font-semibold" id="fileUrl"></p>
